hand-made-pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body data-spy="scroll" data-target=".js-navbar-scrollspy" data-offset="70">
 <section class="header big_block">
     <div class="container">
+    <div></div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
