hand-made-scrapbooking

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body data-spy="scroll" data-target=".js-navbar-scrollspy" data-offset="70">
 <section class="header big_block">
     <div class="container">
-    <div></div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
@@ -95,7 +94,7 @@
         <div class="row">
 
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <img src="images/about_1.jpg" alt="">
+                <img src="images/about_1-min.jpg" alt="">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos consequatur maxime minima, ut, tempore quod quae, fuga aliquid, aspernatur fugiat dolor. Consectetur nesciunt harum laboriosam tempore!</p>
@@ -104,7 +103,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos consequatur maxime minima, ut, tempore quod quae, fuga aliquid, aspernatur fugiat dolor. Consectetur nesciunt harum laboriosam tempore!</p>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                <img src="images/about_2.jpg" alt="">
+                <img src="images/about_2-min.jpg" alt="">
             </div>
 
             </div>
@@ -154,21 +153,21 @@
                     </div>
                 </li>
                 <li class="product_block">
-                    <img src="images/product/product_1-min.jpg" alt="">
+                    <img src="images/product/product_2-min.jpg" alt="">
                     <div class="product_text">
                         <h4>Iste, maxime?</h4>
                             <div class="product_description">Adipisci cumque iure illum porro qui!</div>
                     </div>
                 </li>
                 <li class="product_block">
-                    <img src="images/product/product_2-min.jpg" alt="">
+                    <img src="images/product/product_3-min.jpg" alt="">
                     <div class="product_text">
                         <h4>Quis, dicta.</h4>
                             <div class="product_description">Ex modi enim, neque corporis obcaecati.</div>
                     </div>
                 </li>
                 <li class="product_block">
-                    <img src="images/product/product_3-min.jpg" alt="">
+                    <img src="images/product/product_1-min.jpg" alt="">
                     <div class="product_text">
                         <h4>Sit, magnam.</h4>
                             <div class="product_description">Velit at nostrum nihil, mollitia quas.</div>
